--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -46,7 +46,6 @@ h3 {
 #tvDiv {
     /* margin-bottom: 4vw; */
     padding-bottom: 4vw;
-    background-color: rgb(255, 246, 235);
 }
 
 #buttons {
@@ -327,8 +326,9 @@ li {
     margin-top: 5vw;
 }
 
-#activities>div>h2 {
-    border-bottom: 0.1vw solid #929292;
+#activities {
+    grid-template-areas: 'game projects';
+    column-gap: 5vw;
 }
 
 #game,
@@ -339,26 +339,11 @@ li {
     margin: 5vw 0vw;
 }
 
-#game {
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.297), rgba(255, 255, 255, 0.477)), url('toGameBack.png');
-    background-size: cover;
-}
-
 #gameBtn,
 #viewProjects {
-    background-color: rgb(154, 215, 251);
-    box-shadow: inset -0.01vw -0.01vw 0.1vw #000000;
     padding: 1vw 3vw;
     font-size: 1vw;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
     margin: 2vw 0;
-}
-
-#gameBtn {
-    /* background-image: url('../Recruiter/toGameBack.png');
-    background-size: cover; */
 }
 
 .otherPage {
