--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -4,7 +4,7 @@ body {
 
 #container {
     column-gap: 4vw;
-    background-size: 70vw;
+    /* background-size: 70vw; */
 }
 
 #toast {
@@ -25,6 +25,11 @@ h3 {
 h3 {
     padding: 0.5vw 0.5vw;
     box-shadow: inset 0.2vw 0.2vw 1.5vw white, inset -0.2vw -0.2vw 1.5vw white;
+}
+
+#tvDiv {
+    /* margin-bottom: 4vw; */
+    padding: 7vw 0;
 }
 
 #hello {
@@ -131,7 +136,7 @@ h3 {
 
 #contact {
     background-color: white;
-    margin: 4vw auto;
+    margin: 7vw auto 10vw auto;
     text-align: center;
     display: grid;
     grid-template-areas: 'contactTitle' 'video' 'contactPara' 'details';
@@ -236,23 +241,23 @@ h3 {
 
     #crack {
         max-width: 23vw;
-        top: 30vw;
+        top: 35vw;
     }
 
     #crack2 {
         max-width: 10vw;
-        top: 47vw;
+        top: 52vw;
     }
 
     #hole {
         max-width: 11vw;
-        top: 23vw;
+        top: 28vw;
         right: 5%;
     }
 
     #hole2 {
         max-width: 5vw;
-        top: 35vw;
+        top: 40vw;
         right: 4%;
     }
 
@@ -269,7 +274,7 @@ h3 {
     #helloWorldGlitch {
         max-width: 65%;
         left: 41%;
-        top: 24vw;
+        top: 29vw;
     }
 
     #repair {
@@ -306,6 +311,11 @@ h3 {
 
     .otherPage {
         font-size: 3.5vw;
+    }
+
+    #gameBtn,
+    #viewProjects {
+        font-size: 3vw;
     }
 }
 
@@ -365,23 +375,23 @@ h3 {
 
     #crack {
         max-width: 20vw;
-        top: 23vw;
+        top: 28vw;
     }
 
     #crack2 {
         max-width: 7vw;
-        top: 35vw;
+        top: 40vw;
     }
 
     #hole {
         max-width: 8vw;
-        top: 20vw;
+        top: 25vw;
         right: 16%;
     }
 
     #hole2 {
         max-width: 3vw;
-        top: 28vw;
+        top: 33vw;
         right: 18%;
     }
 
@@ -399,7 +409,7 @@ h3 {
     #helloWorldGlitch {
         max-width: 48%;
         left: 43%;
-        top: 19vw;
+        top: 24vw;
     }
 
     #repair {
@@ -434,7 +444,9 @@ h3 {
         font-size: 1.7vw;
     }
 
-    .otherPage {
+    .otherPage,
+    #gameBtn,
+    #viewProjects {
         font-size: 2vw;
     }
 }
@@ -471,7 +483,7 @@ h3 {
 
 #facts {
     width: 90%;
-    margin: 4vw auto 1vw auto;
+    margin: 7vw auto;
     border-radius: 3.5vw;
     background-color: rgb(255, 254, 246);
     border: 0.5vw solid #404040;
@@ -486,9 +498,35 @@ h3 {
 }
 
 
+
+#activities,
+#contactDiv {
+    background-size: 70vw;
+}
+
 #activities {
     grid-template-areas: 'game' 'projects';
     row-gap: 5vw;
+    padding: 7vw;
+}
+
+#activities>div>h2 {
+    border-radius: 3vw 3vw 0 0;
+}
+
+#game,
+#projects {
+    width: 70vw;
+    border: 0.3vw solid #4c4c4c;
+    border-radius: 3.3vw;
+    /* margin: 5vw 0vw; */
+}
+
+#gameBtn,
+#viewProjects {
+    border-radius: 0.5vw;
+    padding: 1vw 4vw;
+    margin: 5vw 0;
 }
 
 h5>div {
